--- a/DD/DD.tex
+++ b/DD/DD.tex
@@ -4,6 +4,12 @@
 \usepackage{placeins}
 \usepackage{graphicx}
 \usepackage[english]{babel}
+\usepackage{longtable}
+\usepackage{tabularx}
+\usepackage{graphicx}
+
+
+
 
 
 \author{Luca Massini \and Daniele Nicolò}
@@ -136,5 +142,13 @@ UX diagrams:\\
 \FloatBarrier
 
 \section{ Requirements Traceability}
+Here it is possible to find an explanation about how the requirements in the rasd map to the to the design elements that can be found in this document.
 
+\begin{longtable}{| p{5 cm} | p{8 cm} |} \hline
+		Component  & Requirements (RASD)  \\ \hline
+		\newline Communication manager &
+		\begin{itemize}
+			\item boh
+		\end{itemize}
+\end{longtable}
 \end{document}
